Fix scrollbars corner

--- a/_sass/pm-styles/_pm-custom-scrollbar.scss
+++ b/_sass/pm-styles/_pm-custom-scrollbar.scss
@@ -42,4 +42,8 @@ body.isDarkMode {
 			background-color: var(--scrollbar-thumb-hover-color);
 		}
 	}
+
+	&::-webkit-scrollbar-corner {
+		visibility: hidden;
+	}
 }
